Fix spacing on post round popup

--- a/code/UI/General/PostRoundPopup/Entry.scss
+++ b/code/UI/General/PostRoundPopup/Entry.scss
@@ -1,7 +1,7 @@
 Entry
 {
     width: 100%;
-    padding: 8 0;
+    padding: 8px;
     flex-shrink: 0;
     font-size: 22px;
     background-color: #4b4b4b15;
